# Cpp-Algo-Base-Seminars

./: .clang-tidy  CMakeLists.txt  README.md
term-1/sem-13-operator_overloading/: operator_overloading.cpp
term-1/sem-14-functional_object/: functional_object.cpp
term-2/: CMakeLists.txt
term-2/sem-1/: 0.cpp  1-issue.cpp  2-destructor.cpp  3-untrivial_field.cpp  4-raii.cpp  5-copy_contructor.cpp  6-copy_assignment.cpp  vector.cpp
term-2/sem-10/: compile_time_caluculation.cpp
term-2/sem-2/: 0-expression-category.md  0-value_category_tester.cpp  1-value_category_tester.cpp  README.md  auto_ptr.cpp  value_category_tester.hpp  vector.cpp
term-2/sem-3/: 0-problem.cpp  1-incheretance.cpp  2-acceess.cpp  3-constr_order.cpp  4-constructor.cpp  5-slicing.cpp  6-shadowing.cpp
term-2/sem-4/: 0-problem.cpp  1-virtual_function.cpp  2-override.cpp  3-pure_virtual.cpp  4-virtual_in_constructor.cpp  5-virtual_destructor.cpp  6-dynamic_cast.cpp  EBO.cpp  RVO.cpp  funny_example.cpp
term-2/sem-5/: function.cpp  iterator.cpp
term-2/sem-6/: list.hpp  main.cpp
term-2/sem-7/: perfect_forwading.cpp
term-2/sem-8/: CMakeLists.txt  main.cpp  optional.hpp
